# langbadge

./: Cargo.toml  LICENSE  README.md
data/: colors.json  lang.json
src/: analyzer.rs  color.rs  git.rs  main.rs  renderer.rs
