[package]
name = "langbadge"
version = "0.1.0"
edition = "2021"
authors = ["LunaStev"]
description = "Local GitHub-style language bar generator"
license = "MPL-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
regex = "1.10"
svg = "0.18.0"
rayon = "1.8"
dirs = "5.0"
md5 = "0.7"